# KiVM

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README-en.md  README.md
cmake/: FindFFI.cmake  FindZIP.cmake  check-threaded.cpp  cmake-config.h.in
ext/: covscript-kivm.cpp  extension-helper.h  extension_helper.h  objectConverter.cpp
include/kivm/: MirrorKlass.h  attributeInfo.h  classFile.h  classFileParser.h  classFileStream.h  classLoader.h  class_file.h  constantPool.h  field.h  instanceKlass.h  instanceOop.h  interpreter.h  kivm.h  klass.h  method.h  oop.h  primitiveOop.h  runtime_config.h  system.h
include/kivm/asm/: address.h  register.h
include/kivm/bytecode/: bytecodeInterpreter.h  bytecodes.h  codeBlob.h  codeblob.h  execution.h  interpreter.h  invocationContext.h  javaCall.h  threadedInterpreter.h
include/kivm/bytecode2/: bytecodes.h  defs.h  interpreterMacroAssembler.h  template.h  templateTable.h
include/kivm/cfg/: block.h  edge.h
include/kivm/classfile/: annotation.h  attributeInfo.h  classFile.h  classFileParser.h  classFileStream.h  constantPool.h
include/kivm/classpath/: classLoader.h  classPath.h  classPathManager.h  system.h
include/kivm/gc/: gcThread.h
include/kivm/jni/: jni.h  jniEnv.h  jniJavaVM.h  jni_md.h  nativeLibrariy.h  nativeMethod.h  nativeMethodPool.h
include/kivm/memory/: collectedHeap.h  copying.h  copyingHeap.h  gcThread.h  heapRegion.h  markSweep.h  universe.h
include/kivm/native/: classNames.h  class_names.h  java_lang_Class.h  java_lang_String.h  java_lang_Thread.h  java_lang_reflect_Constructor.h  java_lang_reflect_Method.h
include/kivm/oop/: InstanceKlassX.h  arrayKlass.h  arrayOop.h  field.h  helper.h  instanceKlass.h  instanceOop.h  klass.h  method.h  mirrorKlass.h  mirrorOop.h  oop.h  oopfwd.h  primitiveOop.h  reflection.h  reflectionSupport.h  reflection_support.h
include/kivm/runtime/: abstractThread.h  constantPool.h  frame.h  frameWalker.h  integerCache.h  javaThread.h  nativeLibrariy.h  nativeMethodPool.h  runtimeConfig.h  slot.h  stack.h  thread.h  threadState.h  vmThread.h
include/shared/: acl.h  atomic.h  dl.h  filesystem.h  hashMap.h  lock.h  mmap.h  monitor.h  osInfo.h  string.h  types.h  zip.h
include/shared/arch/aarch64/: atomic.h
include/shared/arch/arm/: atomic.h
include/shared/arch/x86/: atomic.h
include/shared/arch/x86_64/: atomic.h
include/shared/os/macos/: osInfo.h
include/shared/os/unix/: dl.h  filesystem.h  osInfo.h
include/shared/os/windows/: dl.h  filesystem.h  osInfo.h
include/shared/platform/common/: dl.h
include/shared/platform/unix/: dl.h
include/shared/platform/windows/: dl.h
include/shared/zip/: libzippp.h
java-src/: Makefile
java-src/com/imkiva/kivm/: ArgumentTest.java  ArgumentTest1.java  ArithmeticTest.java  ArrayTest.java  ArrayTest1.java  ArrayTest2.java  AssertTest.java  AssertTest1.java  ChineseTest.java  ClassCastTest.java  ClassNameTest.java  ClassNameTest1.java  CovScriptJNITest.java  ExceptionTest.java  ExceptionTest1.java  ExceptionTest2.java  ExceptionTest3.java  FileTest.java  GCTest.java  HashTest.java  HelloWorld.java  LambdaTest.java  (+14 more)
src/: classFileStream.cpp
src/kivm/: InstanceKlass.cpp  MirrorKlass.cpp  attributeInfo.cpp  baseClassLoader.cpp  classFile.cpp  classFileParser.cpp  classFileStream.cpp  classLoader.cpp  constantPool.cpp  field.cpp  instanceOop.cpp  interpreter.cpp  kivm.cpp  klass.cpp  method.cpp  oop.cpp  oopBase.cpp  primitiveOop.cpp  runtimeConfig.cpp  runtime_config.cpp  system.cpp
src/kivm/bytecode/: bytecodeInterpreter.cpp  dynamicCall.cpp  dynamicInvocation.cpp  execution.cpp  executionInvoke.cpp  instruction.cpp-inc  interpreter.cpp  invocationContext.cpp  javaCall.cpp  javaInvocationContext.cpp  javaMethodCall.cpp  nativeInvocationContext.cpp  nativeMethodCall.cpp  resolver.cpp  scratchInterpreter.cpp  sharedInterpreter.h  threadedInterpreter.cpp  virtualMethodResolver.cpp
src/kivm/bytecode2/: interpreterMacroAssembler.cpp  template.cpp  templateTable.cpp
src/kivm/classfile/: annotation.cpp  attributeInfo.cpp  classFile.cpp  classFileParser.cpp  classFileStream.cpp  constantPool.cpp
src/kivm/classpath/: baseClassLoader.cpp  classLoader.cpp  classPath.cpp  classPathManager.cpp  system.cpp
src/kivm/gc/: gcThread.cpp
src/kivm/jni/: jniEnv.cpp  jniGlobal.cpp  jniJavaVM.cpp  nativeLibrary.cpp  nativeMethod.cpp  nativeMethodPool.cpp
src/kivm/memory/: copying.cpp  copyingCollector.cpp  copyingHeap.cpp  gcThread.cpp  markSweep.cpp  universe.cpp
src/kivm/native/: java_io_FileDescriptor.cpp  java_io_FileInputStream.cpp  java_io_FileOutputStream.cpp  java_io_UnixFileSystem.cpp  java_lang_Class.cpp  java_lang_ClassLoader.cpp  java_lang_Double.cpp  java_lang_Float.cpp  java_lang_Object.cpp  java_lang_Runtime.cpp  java_lang_String.cpp  java_lang_System.cpp  java_lang_Thread.cpp  java_lang_Throwable.cpp  java_lang_invoke_MethodHandleNatives.cpp  java_lang_reflect_Array.cpp  java_lang_reflect_Constructor.cpp  java_lang_reflect_Method.cpp  java_security_AccessController.cpp  java_util_concurrent_atomic_AtomicLong.cpp  sun_misc_Signal.cpp  sun_misc_URLClassPath.cpp  sun_misc_Unsafe.cpp  sun_misc_VM.cpp  sun_nio_cs_StreamEncoder.cpp  sun_reflect_NativeConstructorAccessorImpl.cpp  sun_reflect_NativeMethodAccessorImpl.cpp  sun_reflect_Reflection.cpp
src/kivm/oop/: InstanceKlass.cpp  InstanceKlassX.cpp  arrayKlass.cpp  arrayOop.cpp  field.cpp  instanceKlass.cpp  instanceOop.cpp  klass.cpp  method.cpp  mirrorKlass.cpp  mirrorOop.cpp  oop.cpp  oopBase.cpp  primitiveOop.cpp  reflection.cpp
src/kivm/runtime/: abstractThread.cpp  constantPool.cpp  frame.cpp  init.cpp  integerCache.cpp  javaThread.cpp  nativeLibrary.cpp  nativeMethodPool.cpp  runtimeConfig.cpp  stack.cpp  thread.cpp  vmThread.cpp
src/shared/: filesystem.cpp  lock.cpp  string.cpp
src/shared/zip/: libzippp.cpp
tests/: bench-allocation.cpp  bench-map.cpp  encode-decode-offset.cpp  main.csc  oop-size.cpp  stack-and-locals.cpp  test-args-parser.cpp  test-encode-decode-offset.cpp  test-native-image.cpp  test-stack-and-locals.cpp
(+11 files in other folders)
